mxslc/tests/data/error/version_1.mxsl
#version 1.39

vec2 uv = texcoord();
vec2 vu = swizzle(uv, "yx");
